@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
-
+<!-- 
+ * :tabSize=8:indentSize=8:noTabs=false:
+ * :folding=explicit:collapseFolds=1:
+-->
 <!DOCTYPE MODE SYSTEM "xmode.dtd">
 
 <MODE>
@@ -39,11 +42,11 @@
 			<END>*/</END>
 		</SPAN>
 
-		<SPAN TYPE="LITERAL1" ESCAPE="\" NO_LINE_BREAK="TRUE">
+		<SPAN TYPE="LITERAL1" DELEGATE="DOUBLEQUOTE_LITERAL" ESCAPE="\" NO_LINE_BREAK="TRUE">
 			<BEGIN>"</BEGIN>
 			<END>"</END>
 		</SPAN>
-		<SPAN TYPE="LITERAL1" ESCAPE="\" NO_LINE_BREAK="TRUE">
+		<SPAN TYPE="LITERAL3" DELEGATE="SIMPLEQUOTE_LITERAL" ESCAPE="\" NO_LINE_BREAK="TRUE">
 			<BEGIN>'</BEGIN>
 			<END>'</END>
 		</SPAN>
@@ -83,7 +86,8 @@
 		<MARK_FOLLOWING TYPE="KEYWORD4">@</MARK_FOLLOWING>
 
 		<KEYWORDS>
-			<KEYWORD1>abstract</KEYWORD1>
+			<!--{{{ modifiers -->
+			<KEYWORD1>assert</KEYWORD1>
 			<KEYWORD1>break</KEYWORD1>
 			<KEYWORD1>case</KEYWORD1>
 			<KEYWORD1>catch</KEYWORD1>
@@ -91,32 +95,40 @@
 			<KEYWORD1>default</KEYWORD1>
 			<KEYWORD1>do</KEYWORD1>
 			<KEYWORD1>else</KEYWORD1>
-			<KEYWORD1>extends</KEYWORD1>
-			<KEYWORD1>final</KEYWORD1>
 			<KEYWORD1>finally</KEYWORD1>
 			<KEYWORD1>for</KEYWORD1>
 			<KEYWORD1>if</KEYWORD1>
-			<KEYWORD1>implements</KEYWORD1>
 			<KEYWORD1>instanceof</KEYWORD1>
-			<KEYWORD1>native</KEYWORD1>
 			<KEYWORD1>new</KEYWORD1>
-			<KEYWORD1>private</KEYWORD1>
-			<KEYWORD1>protected</KEYWORD1>
-			<KEYWORD1>public</KEYWORD1>
 			<KEYWORD1>return</KEYWORD1>
-			<KEYWORD1>static</KEYWORD1>
+			<KEYWORD1>strictfp</KEYWORD1>
 			<KEYWORD1>switch</KEYWORD1>
-			<KEYWORD1>synchronized</KEYWORD1>
 			<KEYWORD1>throw</KEYWORD1>
-			<KEYWORD1>throws</KEYWORD1>
-			<KEYWORD1>transient</KEYWORD1>
 			<KEYWORD1>try</KEYWORD1>
-			<KEYWORD1>volatile</KEYWORD1>
 			<KEYWORD1>while</KEYWORD1>
+			<!--}}}-->
 
+			<!--{{{ structure keywords -->
+			<KEYWORD2>final</KEYWORD2>
+			<KEYWORD2>implements</KEYWORD2>
+			<KEYWORD2>native</KEYWORD2>
+			<KEYWORD2>private</KEYWORD2>
+			<KEYWORD2>protected</KEYWORD2>
+			<KEYWORD2>public</KEYWORD2>
+			<KEYWORD2>static</KEYWORD2>
+			<KEYWORD2>synchronized</KEYWORD2>
+			<KEYWORD2>throws</KEYWORD2>
+			<KEYWORD2>transient</KEYWORD2>
+			<KEYWORD2>volatile</KEYWORD2>
+			<KEYWORD2>abstract</KEYWORD2>
+			<KEYWORD2>extends</KEYWORD2>
+			<KEYWORD2>import</KEYWORD2> 
 			<KEYWORD2>package</KEYWORD2>
-			<KEYWORD2>import</KEYWORD2>
+			<KEYWORD2>enum</KEYWORD2>
+			<KEYWORD3>void</KEYWORD3>
+			<!--}}}-->
 
+			<!--{{{ types -->
 			<KEYWORD3>boolean</KEYWORD3>
 			<KEYWORD3>byte</KEYWORD3>
 			<KEYWORD3>char</KEYWORD3>
@@ -127,26 +139,38 @@
 			<KEYWORD3>interface</KEYWORD3>
 			<KEYWORD3>long</KEYWORD3>
 			<KEYWORD3>short</KEYWORD3>
-			<KEYWORD3>void</KEYWORD3>
+			<!--}}}-->
 
-			<KEYWORD1>assert</KEYWORD1>
-			<KEYWORD1>strictfp</KEYWORD1>
-
-
+			<!--{{{ literals -->
 			<LITERAL2>false</LITERAL2>
 			<LITERAL2>null</LITERAL2>
 			<LITERAL2>super</LITERAL2>
 			<LITERAL2>this</LITERAL2>
 			<LITERAL2>true</LITERAL2>
+			<!--}}}-->
 
 			<INVALID>goto</INVALID>
 			<INVALID>const</INVALID>
-
-			<!-- Java 1.5 -->
-			<KEYWORD3>enum</KEYWORD3>
 		</KEYWORDS>
 	</RULES>
 
+	<!--{{{ DOUBLEQUOTE_LITERAL rule -->
+	<RULES SET="DOUBLEQUOTE_LITERAL" DEFAULT="LITERAL1" IGNORE_CASE="TRUE">
+		<SEQ TYPE="LITERAL4">\n</SEQ>
+		<SEQ TYPE="LITERAL4">\r</SEQ>
+		<SEQ TYPE="LITERAL4">\t</SEQ>
+		<SEQ_REGEXP HASH_CHAR="\u" TYPE="LITERAL4">\\u[a-f\d]{4}</SEQ_REGEXP>
+	</RULES> <!--}}}-->
+	
+	<!--{{{ SIMPLEUOTE_LITERAL rule -->
+	<RULES SET="SIMPLEUOTE_LITERAL" DEFAULT="LITERAL3" IGNORE_CASE="TRUE">
+		<SEQ TYPE="LITERAL4">\n</SEQ>
+		<SEQ TYPE="LITERAL4">\r</SEQ>
+		<SEQ TYPE="LITERAL4">\t</SEQ>
+		<SEQ_REGEXP HASH_CHAR="\u" TYPE="LITERAL4">\\u[a-f\d]{4}</SEQ_REGEXP>
+	</RULES> <!--}}}-->
+
+	<!--{{{ JAVADOC rules -->
 	<RULES SET="JAVADOC" DEFAULT="COMMENT3" IGNORE_CASE="TRUE">
 
 		<!-- so that *@param is highlighted -->
@@ -170,11 +194,11 @@
 		<SEQ TYPE="COMMENT3">&lt;=</SEQ>
 		<SEQ TYPE="COMMENT3">&lt; </SEQ>
 
-        <!-- strings in quotes -->
-        <SPAN TYPE="LITERAL1" ESCAPE="\" NO_LINE_BREAK="TRUE">
-        <BEGIN>&quot;</BEGIN>
-        <END>&quot;</END>
-        </SPAN>
+		<!-- strings in quotes -->
+		<SPAN TYPE="LITERAL1" ESCAPE="\" NO_LINE_BREAK="TRUE">
+		<BEGIN>&quot;</BEGIN>
+		<END>&quot;</END>
+		</SPAN>
 
 		<!-- HTML tags -->
 		<SPAN TYPE="MARKUP" DELEGATE="xml::TAGS"
@@ -271,7 +295,8 @@
 			<KEYWORD4>@uses</KEYWORD4>
 			<KEYWORD4>@values</KEYWORD4>
 		</KEYWORDS>
-	</RULES>
+	</RULES> <!--}}}-->
+
 
 	<!-- just a dummy which makes use of the default token type COMMENT4 for highlighting the word after @param in javadoc -->
 	<RULES SET="JAVADOC_PARAM" DEFAULT="COMMENT4" IGNORE_CASE="TRUE" />
